--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
                 Recomendaciones personalizadas impulsadas por IA que entienden tus gustos y te ayudan a encontrar el juego perfecto para ti.
             </p>
             
-            <a href="{{ url_for('benefits') }}" class="cta-button">
+            <a href="{{ url_for('benefits') }}" class="cta-button" id="subscribeButton">
                 Suscríbete ahora
             </a>
         </div>
